# esp32-keyboard

./: .gitignore  CMakeLists.txt  README.md  hardware_info.md  partitions_8mb_ota.csv  sdkconfig.defaults
assets/animations/: README.md  manifest.yaml
assets/animations/boot/: frame_000.pbm  frame_001.pbm
config/: keymap_config.yaml
docs/: developer_wiki.md
docs/wiki/: API-Reference.md  Architecture.md  Bluetooth-Keyboard.md  Build-and-Flash.md  Buzzer-Feedback.md  Configuration.md  Development-Workflow.md  Documentation-Policy.md  Home-Assistant-Integration.md  Home.md  OLED-Display.md  OTA-Update.md  Post-Change-Automation.md  Runtime-Behavior.md  Touch-Slider-Algorithm.md  Troubleshooting.md  Web-Service.md  Wi-Fi-Provisioning.md  _Sidebar.md
main/: CMakeLists.txt  Kconfig.projbuild  buzzer.c  buzzer.h  hid_ble_backend.c  hid_ble_backend.h  hid_transport.c  hid_transport.h  hid_usb_backend.c  hid_usb_backend.h  home_assistant.c  home_assistant.h  idf_component.yml  keyboard_mode_store.c  keyboard_mode_store.h  keymap_config.h  log_store.c  log_store.h  macropad_hid.c  macropad_hid.h  main.c  oled.c  oled.h  oled_animation_assets.h  oled_clock.c  oled_clock.h  ota_manager.c  ota_manager.h  touch_slider.c  touch_slider.h  web_service.c  web_service.h  wifi_portal.c  wifi_portal.h
tools/: generate_keymap_header.py  generate_oled_animation_header.py  post_change_pipeline.ps1
